# Bipedal_locomotion_nmpc_for_pybullet

./: MPC_WALK_gait_reference.txt  README.md  mpccontr_comzmp.txt  mpccontr_states.txt  nmpc_pybullet.kdev4  python_c.py  python_to_c.txt  rtcontr_states.txt
.kdev4/: nmpc_pybullet.kdev4
src/: CMakeLists.txt  main_function.cpp
src/KMP/: kmp.h
src/MPC/: MPCClass.cpp  MPCClass.h  MPCClass_for_ode.cpp  MPCClass_for_ode.h  referdata_swing.txt
src/MPC_offline/: MPCClass.h
src/QP/: QPBaseClass.cpp  QPBaseClass.h
src/RTControl/: MpcRTControlClass.cpp  MpcRTControlClass.h  MpcRTControlClass_for_ode.cpp  MpcRTControlClass_for_ode.h  RTControlBaseClass.cpp  RTControlBaseClass.h
src/utils/XBotInterface/: Logger.hpp
